Update documentation on using openJDK (developer/user)